--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <html ng-app="application">
 <head>
+	<meta charset="utf-8">
 	<title>Главная страница</title>
 	<script src="vendor/jquery.js"></script>
 	<script src="vendor/angular.js"></script>
 	<script src="vendor/angular-ui-router.js"></script>
 	<script src="vendor/angular-resource.js"></script>
 	<script src="vendor/angular-cookies.js"></script>
-	<link rel="stylesheet" type="text/css" href="app/assets/styles/main.css">
+	<!--<link rel="stylesheet" type="text/css" href="app/assets/styles/main.css">-->
+	<link rel="stylesheet" type="text/css" href="app/assets/styles/profile.css">
 	<link rel="stylesheet" type="text/css" href="app/assets/styles/reset.css">
 </head>
 <body ng-controller="ApplicationController">
@@ -14,8 +16,8 @@
 	<div ui-view></div>
 	
 	<script src="app/application.js"></script>
-	<script src="app/directives.js"></script>
 	<script src="app/factory.js"></script>
+	<script src="app/directives.js"></script>
 	<script src="app/routes.js"></script>
 	<script src="app/controllers.js"></script>
 	<script src="app/models.js"></script>
